completed offre_domici interface

--- a/src/app/client/dashboard/conditions-generales/conditions-generales.component.html
+++ b/src/app/client/dashboard/conditions-generales/conditions-generales.component.html
@@ -19,7 +19,7 @@
     <input type="checkbox" id="conditions" name="conditions">
     <label for="conditions">J'accepte les conditions générales de vente et d'utilisation, et certifie la sincérité des informations transmises.</label><br>
     <div class="col-12">
-        <button type="button" class="btn btn-dark">J'accepte</button>
+        <button type="button" class="butn">J'accepte</button>
     </div></div>
 </div>
 
