--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
-<router-outlet></router-outlet>
-<app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
+<router-outlet ></router-outlet>
+<app-sidenav (onToggleSideNav)="onToggleSideNav($event)">
+</app-sidenav>
 <app-body
     [collapsed]="isSideNavCollapsed"
-    [screenWidth]="screenWidth"
->
+    [screenWidth]="screenWidth">
+    
 </app-body>
