--- a/src/app/client/dashboard/informations/informations.component.html
+++ b/src/app/client/dashboard/informations/informations.component.html
@@ -26,23 +26,6 @@
                     <label for="formFile" class="form-label">Photo de profil :</label>
                     <input class="form-control" type="file" id="formFile">
                 </div>
-
-                    <div class="select-box">
-                        <div class="selected-option">
-                            <div>
-                                <span class="iconify" data-icon="flag:gb-4x3"></span>
-                                <strong>+44</strong>
-                            </div>
-                            <input type="tel" name="tel" placeholder="Phone Number">
-                        </div>
-                        <div class="options">
-                            <input type="text" class="search-box" placeholder="Search Country Name">
-                            <ol>
-                            </ol>
-                        </div>
-                    </div>
-               
-    
                 <div class="col-md-6">
                     <label for="photo">Email :</label>
                     <input type="text" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" id="email" name="email">
@@ -50,10 +33,10 @@
                 <div class="col-12">
                     <div class="row">
                         <div class="col text-start">
-                            <button class="btn btn-secondary" (click)="Retour()">Retour</button>
+                            <button class="butn" (click)="Retour()">Retour</button>
                         </div>
                         <div class="col text-end">
-                            <button class="btn btn-dark" (click)="Suivant()">Suivant</button>
+                            <button class="butn" (click)="Suivant()">Suivant</button>
                         </div>
                     </div>
                 </div>
