--- a/src/app/client/dashboard/validation/validation.component.html
+++ b/src/app/client/dashboard/validation/validation.component.html
@@ -10,10 +10,10 @@
             
             <div class="otpverify" [style.display]="otpVerifyDisplay">
                 <input type="text" id="otp_inp" placeholder="Enter the OTP sent to your Email..." [(ngModel)]="otpInput">
-                <button class="btn btn-dark" (click)="verifyOTP()">vérifier</button>
+                <button class="butn" (click)="verifyOTP()">vérifier</button>
             </div>
             <div class="col-md-12">
-            <button class="btn btn-dark" (click)="sendOTP()">Envoyer OTP</button>
+            <button class="butn" (click)="sendOTP()">Envoyer OTP</button>
             </div>
             </div>
         </div>
