--- a/src/app/client/dashboard/adresse/adresse.component.html
+++ b/src/app/client/dashboard/adresse/adresse.component.html
@@ -5,11 +5,11 @@
 
     <div class="card-body">
         <form class="row g-3" #form="ngForm">
-                <div class="col-12">
-                    <label for="pays">Pays de Résidence :</label>
-                    <input type="text" id="pays" name="pays">
-                </div>
-            
+            <div class="col-12">
+                <label for="pays">Entrer votre pays :</label>
+                <input type="text" id="pays" name="pays" (change)="locateCountry()">
+            </div>
+
             <div class="map-container">
                 <google-map height="300px"
                             width="100%"
@@ -25,15 +25,15 @@
             </div>
             <div class="col-md-12">
                 <label for="ville">Ville :</label>
-                <input type="text" id="ville" name="ville" >
+                <input type="text" id="ville" name="ville">
             </div>
             <div class="col-12">
                 <div class="row">
                     <div class="col text-start">
-                        <button class="btn btn-secondary" (click)="Retour()">Retour</button>
+                        <button class="butn" (click)="Retour()">Retour</button>
                     </div>
                     <div class="col text-end">
-                        <button class="btn btn-dark" (click)="Suivant()">Suivant</button>
+                        <button class="butn" (click)="Suivant()">Suivant</button>
                     </div>
                 </div>
             </div>
