--- a/src/app/client/dashboard/autres-informations/autres-informations.component.html
+++ b/src/app/client/dashboard/autres-informations/autres-informations.component.html
@@ -44,10 +44,10 @@
             <div class="col-12">
                 <div class="row">
                     <div class="col text-start">
-                        <button class="btn btn-secondary" (click)="Retour()">Retour</button>
+                        <button class="butn" (click)="Retour()">Retour</button>
                     </div>
                     <div class="col text-end">
-                        <button class="btn btn-dark" (click)="Suivant()">Suivant</button>
+                        <button class="butn" (click)="Suivant()">Suivant</button>
                     </div>
                 </div>
             </div>
