--- a/src/app/client/dashboard/body/body.component.css
+++ b/src/app/client/dashboard/body/body.component.css
@@ -6,8 +6,10 @@
     position: relative;
     top: 0;
     transition: all .5s ease;
-    background: #f4f7fa;
+    background-image: url('src/assets/img/banner/slide1.png');
+    background-size: cover;
     padding: 3rem;
+    
 }
 .body-trimmed{
     width: calc(100%-5rem);
