--- a/src/app/client/dashboard/offres-et-domicialisation/offres-et-domicialisation.component.html
+++ b/src/app/client/dashboard/offres-et-domicialisation/offres-et-domicialisation.component.html
@@ -11,26 +11,39 @@
                     <option value="agence_moanda">AGENCE DE MOANDA</option>
                 </select>
             </div>
+            
             <div class="col-12">
                 <p>Choisissez votre compte</p>
                 <div class="row">
                     <div class="col-md-4 mb-3" *ngFor="let compte of comptes">
-                        <div class="card" (click)="selectCompte(compte.value)">
-                            <div class="card-body">
+                        <div class="compte" (click)="selectCompte(compte.value)">
+                            <div >
                                 <h5 class="card-title">{{ compte.label }}</h5>
-                                <p class="card-text">Description du {{ compte.label.toLowerCase() }}.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-md-4 mb-3" *ngFor="let pack of packsAffiches">
+                <div class="pack" (click)="selectPack(pack.name, pack.description)" [class.selected]="isSelected(pack.name)">
+                    <div>
+                        <h5 class="card-title">{{ pack.name }}</h5>
+                        <p class="text" *ngIf="isSelected(pack.name)" [innerHTML]="pack.description"></p>
+                        <i class="fas fa-check" *ngIf="isSelected(pack.name)"></i>
+                    </div>
+                </div>
+            </div>
+            
+            
+            
+            
             <div class="col-12">
                 <div class="row">
                     <div class="col text-start">
-                        <button class="btn btn-secondary" (click)="Retour()">Retour</button>
+                        <button class="butn" (click)="Retour()">Retour</button>
                     </div>
                     <div class="col text-end">
-                        <button class="btn btn-dark" (click)="Suivant()">Suivant</button>
+                        <button class="butn" (click)="Suivant()">Suivant</button>
                     </div>
                 </div>
             </div>
