--- a/src/app/client/dashboard/sidenav/sidenav.component.html
+++ b/src/app/client/dashboard/sidenav/sidenav.component.html
@@ -1,11 +1,13 @@
 <div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed':''">
     
     <div class="logo-container">
-        <button class="logo" (click)="toggleCollapse()">B</button>
-            <div class="logo-text" @fadeInOut *ngIf="collapsed"> BAMBOO </div>
-            <button class="btn-close" @rotate *ngIf="collapsed" (click)="closeSidenav()">
-                <i class="fal fa-times close-icon"></i>
-        </button>
+        <div class="logo" (click)="toggleCollapse()">
+            <img id="logo" src="../../../assets/img/logos/logo-inner.png" alt="logo">
+        </div>
+        <div class="btn-close" @rotate *ngIf="collapsed" (click)="closeSidenav()">
+            <i class="fal fa-times close-icon"></i>
+        </div>
+        
     </div>
     <ul class="sidenav-nav">
         <li class="sidenav-nav-item" *ngFor="let data of navData">
