--- a/src/app/client/dashboard/sidenav/sidenav.component.css
+++ b/src/app/client/dashboard/sidenav/sidenav.component.css
@@ -53,7 +53,7 @@
 .sidenav-nav{
     list-style:none;
     padding: 0.938rem;
-    margin: 0;
+    margin-top: 35px;
     display: flex;
     flex-direction: column;
     align-items: center;
