--- a/src/app/client/dashboard/offres-et-domicialisation/offres-et-domicialisation.component.html
+++ b/src/app/client/dashboard/offres-et-domicialisation/offres-et-domicialisation.component.html
@@ -5,8 +5,8 @@
     <div class="card-body">
         <form class="row g-3" #form="ngForm">
             <div class="col-12">
-                <p>Choisissez votre agence de préférence.</p>
-                <label for="agence">Agence :</label>
+                <p>Choisissez votre agence de préférence</p>
+                <label for="agence">Agence </label><span class="required">*</span>
                 <select id="agence">
                     <option value="agence_moanda">AGENCE DE MOANDA</option>
                 </select>
