--- a/src/app/client/dashboard/conditions-generales/conditions-generales.component.html
+++ b/src/app/client/dashboard/conditions-generales/conditions-generales.component.html
@@ -1,7 +1,7 @@
 
 <div class="card">
-    <div class="card-head">
-        <h1>Conditions générales</h1>
+    <div class="card-header">
+        <h4>Conditions générales</h4>
 </div>
     
 <div class="card-body">
@@ -16,10 +16,10 @@
         <li>Site internet: <a href="www.ventis.group">www.ventis.group</a></li>
         <li>Tél: 011 73 58 20</li>
     </ul>
-    <input type="checkbox" id="conditions" name="conditions">
-    <label for="conditions">J'accepte les conditions générales de vente et d'utilisation, et certifie la sincérité des informations transmises.</label><br>
+    <input class="check_box" type="checkbox" id="conditions" name="conditions">
+    <label class="labe_l" for="conditions">J'accepte les conditions générales de vente et d'utilisation, et certifie la sincérité des informations transmises.</label><br>
     <div class="col-12">
-        <button type="button" class="butn">J'accepte</button>
+        <button type="button" class="btn btn-secondary butn">J'accepte</button>
     </div></div>
 </div>
 
