--- a/src/app/client/dashboard/sidenav/sidenav.component.html
+++ b/src/app/client/dashboard/sidenav/sidenav.component.html
@@ -1,24 +1,22 @@
 <div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed':''">
-    
     <div class="logo-container">
         <div class="logo" (click)="toggleCollapse()">
-            <img id="logo" src="../../../assets/img/logos/logo-inner.png" alt="logo">
+            <!-- Show different logo when sidenav is collapsed -->
+            <img id="logo" [src]="collapsed ? '../../../assets/img/logos/logo-inner.png' : '../../../assets/img/logos/favicon1.png'" alt="logo">
         </div>
         <div class="btn-close" @rotate *ngIf="collapsed" (click)="closeSidenav()">
             <i class="fal fa-times close-icon"></i>
         </div>
-        
     </div>
     <ul class="sidenav-nav">
         <li class="sidenav-nav-item" *ngFor="let data of navData">
             <a href="" class="sidenav-nav-link" [routerLink]="data.routeLink"
                 routerLinkActive="active"
-                [routerLinkActiveOptions]="{exact : true}"
-            >
+                [routerLinkActiveOptions]="{exact : true}">
                 <i class="sidenav-link-icon" [class]="data.icon"></i>
+                <!-- Show label only when sidenav is collapsed -->
                 <span class="sidenav-link-text" @fadeInOut *ngIf="collapsed">{{data.label}}</span>
             </a>
-
         </li>
     </ul>
 </div>
