--- a/src/app/client/dashboard/adresse/adresse.component.html
+++ b/src/app/client/dashboard/adresse/adresse.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-head">
+    <div class="card-header">
         <h4>Adresse</h4>
     </div>
 
@@ -30,10 +30,10 @@
             <div class="col-12">
                 <div class="row">
                     <div class="col text-start">
-                        <button class="butn" (click)="Retour()">Retour</button>
+                        <button class="btn btn-secondary butn" (click)="Retour()">Retour</button>
                     </div>
                     <div class="col text-end">
-                        <button class="butn" (click)="Suivant()">Suivant</button>
+                        <button class="btn btn-secondary butn" (click)="Suivant()">Suivant</button>
                     </div>
                 </div>
             </div>
