--- a/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
+++ b/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
@@ -1,1 +1,20 @@
-<p>mot-de-passe works!</p>
+<div class="card">
+    <div class="card-header">
+        <h4>Authentification</h4>
+    </div>
+    <div class="card-body">
+        
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Username" value=""/>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Mot de passe" value=""/>
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="btn btn-secondary butn" (click)="Suivant()">Submit</button>
+        
+    </div>
+</div>
