--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -27,7 +27,7 @@
                                         <!-- Begin Submit button -->
                                         <div class="col-md-4">
                                             <div class="quform-submit-inner">
-                                                <button class="butn m-0 d-block w-100" type="submit"><span>S'abonner</span></button>
+                                                <button class="butn m-0 d-block w-100 homebtn" type="submit"><span>S'abonner</span></button>
                                             </div>
                                             <div class="quform-loading-wrap text-start"><span class="quform-loading"></span></div>
                                         </div>
