--- a/src/app/home/process/process.component.html
+++ b/src/app/home/process/process.component.html
@@ -17,7 +17,7 @@
                                 <i class="ti-desktop display-18 colorban d-block mb-3"></i>
                                 <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.online.step' | translate }}</h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.online.description' | translate }}</p>
-                                <a href="#!" class="butn small">{{ 'homepage.applicationProcess.btn' | translate }}</a>
+                                <a href="#!" class="butn small homebtn">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
@@ -28,7 +28,7 @@
                                 <i class="ti-file display-18 colorban d-block mb-3"></i>
                                 <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.form.step' | translate }}</h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.form.description' | translate }}</p>
-                                <a href="#!" class="butn small">{{ 'homepage.applicationProcess.btn' | translate }}</a>
+                                <a href="#!" class="butn small homebtn">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
@@ -39,7 +39,7 @@
                                 <i class="ti-agenda display-18 colorban d-block mb-3"></i>
                                 <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.submit.step' | translate }}</h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.submit.description' | translate }}</p>
-                                <a href="#!" class="butn small">{{ 'homepage.applicationProcess.btn' | translate }}</a>
+                                <a href="#!" class="butn small homebtn">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                                 <i class="ti-check-box display-18 colorban d-block mb-3"></i>
                                 <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.approve.step' | translate }}</h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.approve.description' | translate }}</p>
-                                <a href="#!" class="butn small">{{ 'homepage.applicationProcess.btn' | translate }}</a>
+                                <a href="#!" class="butn small homebtn">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
