--- a/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.css
+++ b/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.css
@@ -1,12 +1,3 @@
-.note
-{
-    text-align: center;
-    height: 80px;
-    background: -webkit-linear-gradient(left, #0072ff, #8811c5);
-    color: #fff;
-    font-weight: bold;
-    line-height: 80px;
-}
 .form-content
 {
     padding: 5%;
@@ -14,15 +5,5 @@
     margin-bottom: 2%;
 }
 .form-control{
-    border-radius:1.5rem;
-}
-.btnSubmit
-{
-    border:none;
-    border-radius:1.5rem;
-    padding: 1%;
-    width: 20%;
-    cursor: pointer;
-    background: #0062cc;
-    color: #fff;
+    border-radius:10px;
 }
