--- a/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
+++ b/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-        <h4>Authentification</h4>
+        <h4>Vos coordonnées d'authentification</h4>
     </div>
     <div class="card-body">
         
@@ -14,7 +14,7 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="btn btn-secondary butn" (click)="Suivant()">Submit</button>
+            <button type="button" class="btn btn-secondary butn" (click)="Suivant()">Envoyer</button>
         
     </div>
 </div>
