--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,4 +1,11 @@
 
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+
+
 #copyright {
     background: #191919;
     font-size: 15px;
@@ -184,6 +191,11 @@ a:hover,a:active {
     border-radius: 5px;
     z-index: 1;
     border: 1px solid #B48F44 !important;
+}
+
+.homebtn{
+    background: linear-gradient(90deg, #212529, #575c61) !important; 
+    border: #212529 !important;
 }
 
 .butn:before {
