--- a/src/app/client/dashboard/adresse/adresse.component.css
+++ b/src/app/client/dashboard/adresse/adresse.component.css
@@ -1,3 +1,19 @@
-.map-container{
-    padding-top: 25px;
+.map-container {
+    height: 300px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.map-frame {
+    position: relative;
+    width: 100%;
+    height: 100%; /* Ensure the map frame fills the container */
+}
+
+#map {
+    height: 100%;
+    width: 100%;
 }
