--- a/src/app/client/dashboard/informations/informations.component.html
+++ b/src/app/client/dashboard/informations/informations.component.html
@@ -68,10 +68,10 @@
             <div class="col-12">
                 <div class="row">
                     <div class="col text-start">
-                        <button class="btn btn-secondary" (click)="Retour()">Retour</button>
+                        <button class="butn" (click)="Retour()">Retour</button>
                     </div>
                     <div class="col text-end">
-                        <button class="btn btn-dark" (click)="Suivant()" [disabled]="!isFormValid()">Suivant</button>
+                        <button class="butn" (click)="Suivant()" [disabled]="!isFormValid()">Suivant</button>
                     </div>
                 </div>
             </div>
