--- a/src/app/client/dashboard/offres-et-domicialisation/offres-et-domicialisation.component.html
+++ b/src/app/client/dashboard/offres-et-domicialisation/offres-et-domicialisation.component.html
@@ -3,50 +3,63 @@
         <h4>Offres et Domiciliation</h4>
     </div>
     <div class="card-body">
-        <form class="row g-3" #form="ngForm">
-            <div class="col-12">
-                <p>Choisissez votre agence de préférence</p>
-                <label for="agence">Agence </label><span class="required">*</span>
-                <select id="agence">
-                    <option value="agence_moanda">AGENCE DE MOANDA</option>
-                </select>
-            </div>
-            
-            <div class="col-12">
-                <p>Choisissez votre compte</p>
-                <div class="row">
-                    <div class="col-md-4 mb-3" *ngFor="let compte of comptes">
-                        <div class="compte" (click)="selectCompte(compte.value)">
-                            <div >
-                                <h5 class="card-title">{{ compte.label }}</h5>
-                            </div>
+        <div class="row">
+           <!-- Colonne pour la sélection des packs -->
+<div class="col-md-{{ selectedPack ? '8' : '12' }}">
+    <form class="row g-3" #form="ngForm">
+        <div class="col-12">
+            <p>Choisissez votre agence de préférence.</p>
+            <label for="agence">Agence :</label>
+            <select id="agence">
+                <option value="agence_moanda">AGENCE DE MOANDA</option>
+            </select>
+        </div>
+        <div class="col-12">
+            <p>Choisissez votre compte</p>
+            <div class="row">
+                <div class="col-md-4 mb-3" *ngFor="let compte of comptes">
+                    <div class="compte" (click)="selectCompte(compte.value)" [class.selected]="isCompteSelected(compte.value)">
+                        <div>
+                            <h5 class="card-title">{{ compte.label }}</h5>
+                            <i class="fas fa-check" *ngIf="isCompteSelected(compte.value)"></i>
                         </div>
                     </div>
                 </div>
+                
             </div>
-            <div class="col-md-4 mb-3" *ngFor="let pack of packsAffiches">
-                <div class="pack" (click)="selectPack(pack.name, pack.description)" [class.selected]="isSelected(pack.name)">
-                    <div>
-                        <h5 class="card-title">{{ pack.name }}</h5>
-                        <p class="text" *ngIf="isSelected(pack.name)" [innerHTML]="pack.description"></p>
-                        <i class="fas fa-check" *ngIf="isSelected(pack.name)"></i>
-                    </div>
+        </div>
+        <div class="col-md-4 mb-3" *ngFor="let pack of packsAffiches">
+            <div class="pack" (click)="selectPack(pack.name, pack.description)" [class.selected]="isPackSelected(pack.name)">
+                <div>
+                    <h5 class="card-title">{{ pack.name }}</h5>
+                    <i class="fas fa-check" *ngIf="isPackSelected(pack.name)"></i>
                 </div>
             </div>
-            
-            
-            
-            
-            <div class="col-12">
-                <div class="row">
-                    <div class="col text-start">
-                        <button class="butn" (click)="Retour()">Retour</button>
-                    </div>
-                    <div class="col text-end">
-                        <button class="butn" (click)="Suivant()">Suivant</button>
-                    </div>
+        </div>
+    </form>
+</div>
+                        <!-- Colonne pour afficher le contenu du pack sélectionné -->
+                        <div class="col-md-{{ selectedPack ? '4' : '0' }}">
+                        <div class="centerpack">
+                            <div *ngIf="selectedPack" class="selected-pack">
+                                <div class="pack">
+                                    <h5>Description du Pack</h5>
+                                    <p [innerHTML]="selectedPackDescription"></p>
+                                </div>
+                            </div>
+                        </div>
+                        </div> 
+                            
+</div>
+        <div class="col-12">
+            <div class="row">
+                <div class="col text-start">
+                    <button class="butn" (click)="Retour()">Retour</button>
+                </div>
+                <div class="col text-end">
+                    <button class="butn" (click)="Suivant()">Suivant</button>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
 </div>
