--- a/src/app/client/dashboard/dashboard.component.css
+++ b/src/app/client/dashboard/dashboard.component.css
@@ -1,5 +1,6 @@
 .screen {
-    background: linear-gradient(70deg, #ffe0a2, #ffffff);
+    background: #ffffff;
+
     position: relative;
     box-shadow: 0px 0px 24px black;
   }
@@ -9,6 +10,8 @@
     position: relative;
     height: 100%;
   }
+
+
   
   .screen__background {
     position: absolute;
@@ -29,8 +32,7 @@
   .screen__background__shape2 {
     height: 220px;
     width: 220px;
-    background: #ecc984;
-    opacity: 0.4;
+    background: #B48F44;
     top: -172px;
     right: 0;
     border-radius: 32px;
@@ -39,8 +41,7 @@
   .screen__background__shape3 {
     height: 540px;
     width: 190px;
-    background: #ecc984;
-    opacity: 0.4;
+    background: #B48F44;
     top: -24px;
     right: 0;
     border-radius: 32px;
@@ -49,8 +50,8 @@
   .screen__background__shape4 {
     height: 400px;
     width: 200px;
-    background: #ecc984;
-    opacity: 0.4;
+    background: #B48F44;
+ 
     top: 420px;
     right: 50px;
     border-radius: 60px;
