--- a/src/app/home/topbar/topbar.component.html
+++ b/src/app/home/topbar/topbar.component.html
@@ -33,90 +33,79 @@
                             <!-- menu area -->
                             <ul class="navbar-nav mx-auto" id="nav">
                                 <li><a href="">{{ 'homepage.topbar_component.home' | translate }}</a></li>
-                                <li>
-                                    <a href="#">Pages</a>
+                              
+                                <li><a href="#">Prêts</a>
                                     <ul>
-                                        <li><a href="#">{{ 'homepage.topbar_component.pages.aboutUs' | translate }}</a></li>
-                                        <li><a href="#">{{ 'homepage.topbar_component.pages.howItWorks' | translate }}</a></li>
-                                        <li><a href="#">{{ 'homepage.topbar_component.pages.testimonials' | translate }}</a></li>
-                                        <li><a href="#">{{ 'homepage.topbar_component.pages.team' | translate }}</a></li>
-                                        <li><a href="#">Portfolio</a>
-                                            <ul>
-                                                <li><a href="">Portfolio 1</a></li>
-                                                <li><a href="">Portfolio 2</a></li>
-                                                <li><a href="">Portfolio Details</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="">FAQ's</a></li>
-                                        <li><a href="">404 Page</a></li>
+                                        <li ><a href="" ><i class="fas fa-money-bill-wave"></i>{{ 'homepage.topbar_component.services.services' | translate }}</a></li>
+                                        <li><a href=""> <i class="fas fa-user"></i>{{ 'homepage.topbar_component.services.personalLoan' | translate }}</a></li>
+                                        <li><a href=""><i class="fas fa-building"></i>{{ 'homepage.topbar_component.services.businessLoan' | translate }}</a></li>
+                                        <li><a href=""><i class="fas fa-home"></i>{{ 'homepage.topbar_component.services.homeLoan' | translate }}</a></li>
+                                        <li><a href=""><i class="fas fa-book"></i>{{ 'homepage.topbar_component.services.educationLoan' | translate }}</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="#">Services</a>
-                                    <ul>
-                                        <li><a href="">{{ 'homepage.topbar_component.services.services' | translate }}</a></li>
-                                        <li><a href="">{{ 'homepage.topbar_component.services.personalLoan' | translate }}</a></li>
-                                        <li><a href="">{{ 'homepage.topbar_component.services.businessLoan' | translate }}</a></li>
-                                        <li><a href="">{{ 'homepage.topbar_component.services.homeLoan' | translate }}</a></li>
-                                        <li><a href="">{{ 'homepage.topbar_component.services.educationLoan' | translate }}</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Elements</a>
                                     <ul class="row megamenu">
                                         <li class="col-lg-3">
-                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Elements 01</span>
+                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">LA BANQUE AU QUOTIDIEN
+                                            </span>
                                             <ul>
-                                                <li><a href=""><i class="fas fa-sliders-h me-2"></i>Accordions</a></li>
-                                                <li><a href=""><i class="far fa-bell me-2"></i>Alerts</a></li>
-                                                <li><a href=""><i class="fas fa-vector-square me-2"></i>Blockquote</a></li>
-                                                <li><a href=""><i class="fas fa-link me-2"></i>Buttons</a></li>
-                                                <li><a href=""><i class="far fa-square me-2"></i>Call to Action</a></li>
-                                                <li><a href=""><i class="far fa-images me-2"></i>Carousel Slider</a></li>
+                                                <li><a href=""><i class="fas fa-box me-2"></i>Packages</a></li>
+                                                <li><a href=""><i class="fas fa-dollar-sign me-2"></i>Comptes en dinars</a></li>
+                                                <li><a href=""><i class="fas fa-exchange-alt me-2"></i> Comptes en devises et en dinars convertibles</a></li>
+                                                <li><a href=""><i class="fas fa-globe me-2"></i> Banque à distance</a></li>
+                                                <li><a href=""><i class="far fa-credit-card me-2"></i>Cartes bancaires</a></li>
+                                                <li><a href=""><i class="far fa-money-bill-alt me-2"></i>MoneyGram</a></li>
+                                                <li><a href=""><i class="fas fa-store-alt me-2"></i>Affiliation TPE</a></li>
+                                                
                                             </ul>
                                         </li>
                                         <li class="col-lg-3">
-                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Elements 02</span>
+                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">EPARGNE ET PLACEMENT
+                                             </span>
                                             <ul>
-                                                <li><a href=""><i class="far fa-flag me-2"></i>Count Down</a></li>
-                                                <li><a href=""><i class="fas fa-compress me-2"></i>Counters</a></li>
-                                                <li><a href=""><i class="fab fa-wpforms me-2"></i>Forms</a></li>
-                                                <li><a href=""><i class="far fa-check-square me-2"></i>Font Icons</a></li>
-                                                <li><a href=""><i class="fas fa-map-marker-alt me-2"></i>Google Map</a></li>
-                                                <li><a href=""><i class="fas fa-th me-2"></i>Grid System</a></li>
+                                                <li><a href=""><i class="fas fa-coins me-2"></i> Produits d’Épargne</a></li>
+                                                <li><a href=""><i class="fas fa-chart-line me-2"></i> Produits de Placement</a></li>
                                             </ul>
                                         </li>
                                         <li class="col-lg-3">
-                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Elements 03</span>
+                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">CRÉDITS ET FINANCEMENT
+                                            </span>
                                             <ul>
-                                                <li><a href=""><i class="fab fa-fonticons-fi me-2"></i>Icon With Text</a></li>
-                                                <li><a href=""><i class="fas fa-list-ul me-2"></i>List Styles</a></li>
-                                                <li><a href=""><i class="fas fa-photo-video me-2"></i>Media Object</a></li>
-                                                <li><a href=""><i class="fas fa-expand me-2"></i>Modal</a></li>
-                                                <li><a href=""><i class="far fa-caret-square-right me-2"></i>Pagination</a></li>
-                                                <li><a href=""><i class="fas fa-tasks me-2"></i>Progress Bars</a></li>
+                                                <li><a href=""><i class="fas fa-hand-holding-usd me-2"></i> Financement des Particuliers</a></li>
+                                                <li><a href=""><i class="fas fa-building me-2"></i> Financement des Entreprises</a></li>
+                                                <li><a href=""><i class="fas fa-tractor me-2"></i> Financement Agricole</a></li>
+                                                <li><a href=""><i class="fas fa-briefcase me-2"></i> Financement des Professionnels</a></li>
+                                                
                                             </ul>
                                         </li>
                                         <li class="col-lg-3">
-                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Elements 04</span>
-                                            <ul>
-                                                <li><a href=""><i class="fas fa-compress me-2"></i>Page Title1</a></li>
-                                                <li><a href=""><i class="fas fa-compress-arrows-alt me-2"></i>Page Title2</a></li>
-                                                <li><a href=""><i class="fas fa-table me-2"></i>Tables</a></li>
-                                                <li><a href=""><i class="fas fa-sliders-h me-2"></i>Tabs</a></li>
-                                                <li><a href=""><i class="fas fa-text-height me-2"></i>Typography</a></li>
-                                                <li><a href=""><i class="fas fa-video me-2"></i>Videos</a></li>
-                                            </ul>
+                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">SERVICES À L’INTERNATIONAL
+                                      </span>
+                                      <ul>
+                                        <li><a href=""><i class="fas fa-home me-2"></i> Domiciliation</a></li>
+                                        <li><a href=""><i class="fas fa-money-check-alt me-2"></i> Paiements Internationaux</a></li>
+                                        <li><a href=""><i class="fas fa-shield-alt me-2"></i> Garanties Internationales</a></li>
+                                        <li><a href=""><i class="fas fa-exchange-alt me-2"></i> Opérations de Change</a></li>
+                                        <li><a href=""><i class="fas fa-globe-americas me-2"></i> Nos correspondants</a></li>
+                                        <li><a href=""><i class="fas fa-plane me-2"></i> Allocation voyage d'affaires AVA</a></li>
+                                    </ul>
+                                    
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="#!">Blog</a>
                                     <ul>
-                                        <li><a href="">Blog Grid</a></li>
-                                        <li><a href="">Blog List</a></li>
-                                        <li><a href="">Blog Details</a></li>
-                                    </ul>
+                                        <li><a href=""><i class="fas fa-th-large me-2"></i> Blog Grid</a></li>
+                                        <li><a href=""><i class="fas fa-list me-2"></i> Blog List</a></li>
+                                        <li><a href=""><i class="fas fa-file-alt me-2"></i> Blog Details</a></li>
+                                    </ul>                                    
                                 </li>
                                 <li><a href="">{{ 'homepage.topbar_component.contactUs' | translate }}</a></li>
+                                <li>
+                                    <a href="#">Devenir Client</a>
+                            
+                                </li>
                             </ul>
                             <!-- end menu area -->
 
@@ -124,7 +113,6 @@
                             <div class="attr-nav">
                                 <ul>
                                     <li class="search"><a href="#!"><i class="fas fa-search"></i></a></li>
-                                    <li class="d-none d-lg-inline-block"><a [routerLink]="['/login']" class="butn small homebtn">{{ 'homepage.topbar_component.smallBtn' | translate }}</a></li>
                                     <!-- Flag Selector -->
                                     <li class="dropdown" (click)="toggleDropdown($event)">
                                         <a class="dropdown-toggle" data-toggle="dropdown">
